gobmkida/g3/gg_set_rand_state
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/gg_set_rand_state/src/utils/random.c:660:36: error: use of undeclared identifier 'dword_BB8F1C'
if ( ( unsigned __int64)( ( char *)dword_BB8F1C - ( char *)state) <= 8 ) 
                                   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/gg_set_rand_state/src/utils/random.c:662:25: error: use of undeclared identifier 'dword_BB8F1C'
for ( i = 0LL; i != 25; dword_BB8F1C[i] = v9 ) 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/gg_set_rand_state/src/utils/random.c:664:1: error: expected expression
::k = state->k; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/gg_set_rand_state/src/utils/random.c:679:1: error: expected expression
::k = k; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/gg_set_rand_state/src/obj/5/random.o] Error 1
